just have the one .ics from google calendar and get this wrapped up

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 on the internal DCPPC website for information about available calendars.
 </p>
 
-<p>If you are looking for the single, integrated DCPPC calendar feed in iCal format, you can find it here: <a href="integrated_calendar.ics">integrated_calendar.ics</a>
+<p>If you are looking for the single, integrated DCPPC calendar feed in iCal format, you can find it here: 
+<a href="https://calendar.google.com/calendar/ical/nihdatacommons.com_7rjl480g7iqg9vrhj1dp8sitg8%40group.calendar.google.com/public/basic.ics">integrated_calendar.ics (Google Calendar feed)</a>
 </p>
 
-<p>If you would like a Google Calendar feed, you can find a link here: <a href="https://calendar.google.com/calendar/ical/nihdatacommons.com_7rjl480g7iqg9vrhj1dp8sitg8%40group.calendar.google.com/public/basic.ics">integrated_calendar.ics (Google Calendar feed)</a>
-</p>
-
-<p>You can add either of these calendar feeds to your favorite calendar software.
+<p>You can add this calendar feed to your favorite calendar software.
 </p>
 
 <iframe src="https://calendar.google.com/calendar/embed?src=nihdatacommons.com_7rjl480g7iqg9vrhj1dp8sitg8%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
